--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
        <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2" id="i851d9">
         <div class="col" id="irtf9s">
          <div id="i6vw3f">
-          Pleasure to work with
+          Here are some of our clients, that trust us and help us deliver their need.
          </div>
         </div>
         <div class="col" id="it0ml2">
