--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
    </div>
   </div>
   <div id="i34tg" class="col">
-   <div id="ica4i">
+   <div id="ica4i" class="p-0">
     Our achivements
     <br>
    </div>
