--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
        <div id="collapse-38e8d20e-76bf-4bd1-8116-b81fb5a10adb" class="collapse navbar-collapse">
         <ul id="ipjf" class="navbar-nav me-auto mb-2 mb-lg-0">
          <li id="ioia" class="nav-item"><a aria-current="page" href="#" id="iekii" class="nav-link active">Home</a></li>
-         <li class="nav-item" id="idun8"><a page="page://Fsz6ThtqsC3LvLnu3" name="About Us" slug="about-us" href="//webpage-webbuildershopiana.vercel.app/about-us.html" link-type="page" id="ih97j" class="nav-link">About Us</a></li>
-         <li class="nav-item" id="i107ys"><a page="page://sqMvZMlEXxEQUI0Axj" name="Contact Us" slug="contact-us" href="//webpage-webbuildershopiana.vercel.app/contact-us.html" link-type="page" class="nav-link" id="ip5byl">Contact Us</a></li>
+         <li id="idun8" class="nav-item"><a page="page://Fsz6ThtqsC3LvLnu3" name="About Us" slug="about-us" href="//webpage-webbuildershopiana.vercel.app/about-us.html" link-type="page" id="ih97j" class="nav-link">About Us</a></li>
+         <li id="i107ys" class="nav-item"><a page="page://sqMvZMlEXxEQUI0Axj" name="Contact Us" slug="contact-us" href="//webpage-webbuildershopiana.vercel.app/contact-us.html" link-type="page" id="ip5byl" class="nav-link">Contact Us</a></li>
          <li class="nav-item dropdown"><a href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" class="nav-link dropdown-toggle">Products &amp; Services</a>
           <ul aria-labelledby="navbarDropdown" id="irx5k" class="dropdown-menu">
            <li><a href="#" id="iqx3i" class="dropdown-item">O&amp;M</a></li>
@@ -144,7 +144,7 @@
     Our achivements
     <br>
    </div>
-   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-3" id="ig275">
+   <div id="ig275" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-3">
     <div id="ibly9" class="col">
      <div id="iwpml" class="col">
       <div id="iishm">
@@ -186,36 +186,36 @@
     </div>
    </div>
    <div id="i7586" class="col">
-    <div class="col" id="iywys">
+    <div id="iywys" class="col">
      <div id="irojq">
       We're changing the 
       <br>
       whole game.
      </div>
-     <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2" id="ig1r6">
-      <div class="col" id="ir5bs">
+     <div id="ig1r6" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2">
+      <div id="ir5bs" class="col">
        <button type="button" id="ibne5a">About Us</button>
       </div>
-      <div class="col" id="i46ff3">
+      <div id="i46ff3" class="col">
        <button type="button" id="irb4qp">Contact us</button>
       </div>
      </div>
     </div>
    </div>
-   <div class="col" id="ijc9ly">
-    <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2" id="ixt424">
-     <div class="col" id="iiia51">
+   <div id="ijc9ly" class="col">
+    <div id="ixt424" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2">
+     <div id="iiia51" class="col">
       <div id="i8n8sk">
        OUR STORY
       </div>
       <div id="ii754n">
        We're building the economic infrastructure for the internet, business of every size.
       </div>
-      <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2" id="iv89m3">
-       <div class="col" id="i4u6nv">
+      <div id="iv89m3" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2">
+       <div id="i4u6nv" class="col">
         <img id="iaw18h" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/About Our Team 1.png">
        </div>
-       <div class="col" id="ic9cq9">
+       <div id="ic9cq9" class="col">
         <div id="ivppt3">
          A living place for curiosity and collaboration, meeting and meaning.&nbsp;
          <br>
@@ -224,9 +224,9 @@
        </div>
       </div>
      </div>
-     <div class="col" id="ifexij">
-      <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-3" id="ix9fhu">
-       <div class="col" id="ifgt3t">
+     <div id="ifexij" class="col">
+      <div id="ix9fhu" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-3">
+       <div id="ifgt3t" class="col">
         <div id="imsz2m">
          6 years of intense research
         </div>
@@ -234,7 +234,7 @@
          <span id="ij8cc9">Lorem Ipsum</span><span id="im32v9">&nbsp;is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</span>
         </div>
        </div>
-       <div class="col" id="iwofqr">
+       <div id="iwofqr" class="col">
         <div id="i12mhx">
          6 years of intense research
         </div>
@@ -242,7 +242,7 @@
          <span id="iayb13">Lorem Ipsum</span><span id="im8z88">&nbsp;is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s,</span>
         </div>
        </div>
-       <div class="col" id="iaol49">
+       <div id="iaol49" class="col">
         <div id="injv0k">
          6 years of intense research
         </div>
@@ -253,78 +253,78 @@
       </div>
      </div>
     </div>
-    <div class="col" id="ifqnw6">
-     <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2" id="ih48mw">
-      <div class="col" id="iww89r">
-       <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-3" id="i8oni9">
-        <div class="col" id="ii22nz">
+    <div id="ifqnw6" class="col">
+     <div id="ih48mw" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2">
+      <div id="iww89r" class="col">
+       <div id="i8oni9" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-3">
+        <div id="ii22nz" class="col">
          <img id="ihlstt" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/18966214 1.png">
          <div id="i29ydh">
           400 kwp Rooftop MDSU Ajmer
          </div>
         </div>
-        <div class="col" id="ifg1sz">
+        <div id="ifg1sz" class="col">
          <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/18966214 1.png" id="irgp54">
          <div id="i24n6j">
           400 kwp Rooftop MDSU Ajmer
          </div>
         </div>
-        <div class="col" id="inpnky">
+        <div id="inpnky" class="col">
          <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/18966214 1.png" id="i13cij">
          <div id="irffjx">
           400 kwp Rooftop MDSU Ajmer
          </div>
         </div>
        </div>
-       <div class="col" id="ija1zm">
+       <div id="ija1zm" class="col">
         <button type="button" id="i5semt">See more</button>
        </div>
       </div>
-      <div class="col" id="ihg67u">
+      <div id="ihg67u" class="col">
        <div id="ille5x">
         Our projects
        </div>
       </div>
      </div>
-     <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2" id="i5igbm">
-      <div class="col" id="ic70kb">
-       <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2" id="i851d9">
-        <div class="col" id="irtf9s">
+     <div id="i5igbm" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2">
+      <div id="ic70kb" class="col">
+       <div id="i851d9" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2">
+        <div id="irtf9s" class="col">
          <div id="i6vw3f">
           Here are some of our clients, that trust us and help us deliver their need.
          </div>
         </div>
-        <div class="col" id="it0ml2">
+        <div id="it0ml2" class="col">
          <div id="il58rl">
           Our clients
          </div>
         </div>
        </div>
       </div>
-      <div class="col" id="i9xabd">
-       <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1" id="ikx23v">
-        <div class="col" id="iajjok">
-         <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2" id="iqmau4">
-          <div class="col" id="ikrcai">
+      <div id="i9xabd" class="col">
+       <div id="ikx23v" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1">
+        <div id="iajjok" class="col">
+         <div id="iqmau4" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2">
+          <div id="ikrcai" class="col">
            <img id="izdb32" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/download (1).jpg">
           </div>
-          <div class="col" id="izsezh">
+          <div id="izsezh" class="col">
            <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/download (5).png" id="i6tatz">
           </div>
          </div>
-         <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2" id="idfski">
-          <div class="col" id="iozhu7">
+         <div id="idfski" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2">
+          <div id="iozhu7" class="col">
            <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/download (5).png" id="ibyxmy">
           </div>
-          <div class="col" id="i6oza7">
+          <div id="i6oza7" class="col">
            <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/download (6).png" id="ism681">
           </div>
          </div>
-         <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2" id="i4ep4i">
-          <div class="col" id="i51xd1">
+         <div id="i4ep4i" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2">
+          <div id="i51xd1" class="col">
            <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/download (7).png" id="iwwfb8">
           </div>
-          <div class="col" id="isj6y5">
+          <div id="isj6y5" class="col">
            <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/download (5).png" id="i7ss3h">
           </div>
          </div>
@@ -332,14 +332,14 @@
        </div>
       </div>
      </div>
-     <div class="col" id="iwkt69">
-      <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2" id="ig7cln">
-       <div class="col" id="i81s63">
+     <div id="iwkt69" class="col">
+      <div id="ig7cln" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2">
+       <div id="i81s63" class="col">
         <div id="iatuub">
          Contact Us
         </div>
-        <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-3" id="i8hjws">
-         <div class="col" id="igv4r6">
+        <div id="i8hjws" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-3">
+         <div id="igv4r6" class="col">
           <div id="i7xati">
            Address:
           </div>
@@ -347,7 +347,7 @@
            402, Alankar plaza, Vidyadhar nagar, Jaipur, Rajasthan- 302039
           </div>
          </div>
-         <div class="col" id="is60fy">
+         <div id="is60fy" class="col">
           <div id="i10x5r">
            Phone:
           </div>
@@ -355,7 +355,7 @@
            +91 8147852800
           </div>
          </div>
-         <div class="col" id="i03d2h">
+         <div id="i03d2h" class="col">
           <div id="iweb0w">
            Email:
           </div>
@@ -365,21 +365,21 @@
          </div>
         </div>
        </div>
-       <div class="col" id="iwkryy">
+       <div id="iwkryy" class="col">
         <img id="i7jikc" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/Conversation Businessman Customer 2.png">
        </div>
       </div>
-      <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2" id="i5bisc">
-       <footer class="text-center text-lg-start text-muted w-100" id="i7s2p2">
+      <div id="i5bisc" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2">
+       <footer id="i7s2p2" class="text-center text-lg-start text-muted w-100">
         <!-- Section: Social media -->
-        <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom" id="ie8m1r">
+        <section id="ie8m1r" class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
          <!-- Left -->
          <div class="me-5 d-none d-lg-block">
           <span>Get connected with us on social networks:</span>
          </div><!-- Left --><!-- Right -->
          <div>
           <a href="" class="me-4 text-reset">
-           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewbox="0 0 16 16" class="bi bi-facebook" id="i0uayv">
+           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewbox="0 0 16 16" id="i0uayv" class="bi bi-facebook">
             <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"></path>
            </svg></a><a href="" class="me-4 text-reset">
            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewbox="0 0 16 16" class="bi bi-twitter">
@@ -400,13 +400,13 @@
            <!-- Grid column -->
            <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
             <!-- Content -->
-            <h6 class="text-uppercase fw-bold mb-4" id="ifxuvq"><i class="fas fa-gem me-3"></i>D square solar services</h6>
+            <h6 id="ifxuvq" class="text-uppercase fw-bold mb-4"><i class="fas fa-gem me-3"></i>D square solar services</h6>
             <p id="i869zt">Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
            </div><!-- Grid column --><!-- Grid column -->
-           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4" id="i6q2ng">
+           <div id="i6q2ng" class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
             <!-- Links -->
             <h6 class="text-uppercase fw-bold mb-4">Products</h6>
-            <p><a href="#!" class="text-reset" id="ix60sl">Angular</a></p>
+            <p><a href="#!" id="ix60sl" class="text-reset">Angular</a></p>
             <p><a href="#!" class="text-reset">React</a></p>
             <p><a href="#!" class="text-reset">Vue</a></p>
             <p><a href="#!" class="text-reset">Laravel</a></p>
