--- a/module-cleaning.html
+++ b/module-cleaning.html
@@ -67,7 +67,7 @@
 
 <style type="text/css">
 
-* { box-sizing: border-box; } body {margin: 0;}#iwog8f{padding:10px;text-align:center;font-size:32px;font-weight:700;}#ionu5i{padding:10px;text-align:center;font-size:16px;font-weight:700;}#iuos5j{padding:10px;text-align:center;}#ix59xq{color:rgb(33, 33, 33);font-family:"Open Sans", sans-serif;font-variant-ligatures:none;white-space-collapse:preserve;}#idntzl{padding:10px;text-align:center;font-weight:600;font-size:20px;}#inwz5d{color:black;width:448px;}#ilsj9j{padding:10px;text-align:center;font-weight:600;font-size:20px;}#ib1yok{color:black;width:448px;}#icmtdk{padding:10px;text-align:center;font-size:24px;font-weight:600;}#iwd7ly{padding:10px;text-align:center;border:0.5px solid #c4c4c4;border-radius:10px 10px 10px 10px;}#ih23d1{color:rgb(33, 33, 33);font-family:"Open Sans", sans-serif;font-variant-ligatures:none;white-space-collapse:preserve;}#ill9o7{color:rgb(33, 33, 33);font-family:"Open Sans", sans-serif;font-variant-ligatures:none;white-space-collapse:preserve;}#iz68ze{padding:10px;text-align:center;border:0.5px solid #c4c4c4;border-radius:10px 10px 10px 10px;}#iml3bo{padding:10px;text-align:center;border:0.5px solid #c4c4c4;border-radius:10px 10px 10px 10px;}#i5qdr05{width:100%;display:flex;justify-content:flex-end;}
+* { box-sizing: border-box; } body {margin: 0;}#iwog8f{padding:10px;text-align:center;font-size:32px;font-weight:700;}#ionu5i{padding:10px;text-align:center;font-size:16px;font-weight:700;}#iuos5j{padding:10px;text-align:center;}#ix59xq{color:rgb(33, 33, 33);font-family:"Open Sans", sans-serif;font-variant-ligatures:none;white-space-collapse:preserve;}#idntzl{padding:10px;text-align:center;font-weight:600;font-size:20px;}#inwz5d{color:black;width:100%;display:flex;justify-content:center;align-items:center;align-content:center;}#ilsj9j{padding:10px;text-align:center;font-weight:600;font-size:20px;}#ib1yok{color:black;width:100%;display:flex;justify-content:center;}#icmtdk{padding:10px;text-align:center;font-size:24px;font-weight:600;}#iwd7ly{padding:10px;text-align:center;border:0.5px solid #c4c4c4;border-radius:10px 10px 10px 10px;}#ih23d1{color:rgb(33, 33, 33);font-family:"Open Sans", sans-serif;font-variant-ligatures:none;white-space-collapse:preserve;}#ill9o7{color:rgb(33, 33, 33);font-family:"Open Sans", sans-serif;font-variant-ligatures:none;white-space-collapse:preserve;}#iz68ze{padding:10px;text-align:center;border:0.5px solid #c4c4c4;border-radius:10px 10px 10px 10px;}#iml3bo{padding:10px;text-align:center;border:0.5px solid #c4c4c4;border-radius:10px 10px 10px 10px;}#i5qdr05{width:100%;display:flex;justify-content:flex-end;}
 
 </style>
 
@@ -114,7 +114,7 @@
    </div>
   </div>
   <div class="container" id="i9s1rh">
-   <div class="row p-2">
+   <div class="row p-2" id="i7gbfj">
     <div class="col">
      <div id="ionu5i">
       The importance of cleaning
@@ -122,20 +122,6 @@
      <div id="iuos5j">
       <span id="ix59xq">Because panels sit outside, they’re vulnerable to the elements. Even the most hardy panels will gradually wear and become dirty over time. We make sure our customers’ panels stay clean and efficient with regular site visits and checks.</span>
      </div>
-    </div>
-   </div>
-  </div>
-  <div class="container" id="i6pi0t">
-   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2" id="ilssqc">
-    <div class="col" id="i41128">
-     <div id="idntzl">
-      Before Cleaning
-     </div><img id="inwz5d" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/EmbeddedImage (1).jpg">
-    </div>
-    <div class="col" id="icvy9h">
-     <div id="ilsj9j">
-      After Cleaning
-     </div><img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/EmbeddedImage (2).jpg" id="ib1yok">
     </div>
    </div>
   </div>
@@ -165,8 +151,24 @@
      </div>
     </div>
    </div>
+  </div>
+  <div class="container" id="i6pi0t">
+   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2" id="ilssqc">
+    <div class="col" id="i41128">
+     <div id="idntzl">
+      Before Cleaning
+     </div><img id="inwz5d" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/EmbeddedImage (1).jpg">
+    </div>
+    <div class="col" id="icvy9h">
+     <div id="ilsj9j">
+      After Cleaning
+     </div><img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/EmbeddedImage (2).jpg" id="ib1yok">
+    </div>
+   </div>
+  </div>
+  <div class="container" id="ibglusf">
    <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2">
-    <footer class="text-center text-lg-start text-muted w-100" id="iil08f">
+    <footer class="text-center text-lg-start text-muted w-100" id="ioibfvz">
      <!-- Section: Social media -->
      <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
       <!-- Left -->
@@ -196,7 +198,7 @@
         <!-- Grid column -->
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
          <!-- Content -->
-         <h6 class="text-uppercase fw-bold mb-4" id="iyeon9f"><i class="fas fa-gem me-3"></i>D square solar services</h6>
+         <h6 class="text-uppercase fw-bold mb-4" id="ifrry41"><i class="fas fa-gem me-3"></i>d square solar serivces</h6>
          <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
         </div><!-- Grid column --><!-- Grid column -->
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
@@ -226,8 +228,8 @@
        </div><!-- Grid row -->
       </div>
      </section><!-- Section: Links  --><!-- Copyright -->
-     <div class="text-center p-4" id="ic0v0d3">
-      © 2021 Copyright: <a href="https://mdbootstrap.com/" class="text-reset fw-bold" id="ikge0z6">Shopiana.io</a>
+     <div class="text-center p-4">
+      © 2021 Copyright: <a href="https://mdbootstrap.com/" class="text-reset fw-bold">Shopiana.com</a>
      </div><!-- Copyright -->
     </footer><!-- Footer -->
    </div>
