--- a/o&m.html
+++ b/o&m.html
@@ -290,7 +290,7 @@
         <!-- Grid column -->
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
          <!-- Content -->
-         <h6 class="text-uppercase fw-bold mb-4" id="imhnngl"><i class="fas fa-gem me-3"></i>d square solar services</h6>
+         <h6 class="text-uppercase fw-bold mb-4" id="imhnngl"><i class="fas fa-gem me-3"></i>Company name</h6>
          <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
         </div><!-- Grid column --><!-- Grid column -->
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
