00abdd64-33cd-4454-95c7-20a24dbeb2c2

--- a/o&m.html
+++ b/o&m.html
@@ -106,7 +106,7 @@
     </div>
    </div>
   </div>
-  <div class="container-fluid" id="iswema">
+  <div id="iswema" class="container-fluid">
    <div class="row p-2">
     <div class="col">
      <div id="isxwhp">
@@ -115,93 +115,93 @@
     </div>
    </div>
   </div>
-  <div class="container-fluid" id="igh381">
-   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1" id="ihfrh3">
+  <div id="igh381" class="container-fluid">
+   <div id="ihfrh3" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1">
     <div class="col">
      <div id="ivylz4">
       What we offer?
      </div>
     </div>
    </div>
-   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-3" id="iu5je8">
-    <div class="col" id="ict02q">
+   <div id="iu5je8" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-3">
+    <div id="ict02q" class="col">
      <div id="ibkb1o">
       Monthly test and inspection visits
      </div>
     </div>
-    <div class="col" id="i99se8">
+    <div id="i99se8" class="col">
      <div id="iidiyv">
       Panel cleaning
       <br>
      </div>
     </div>
-    <div class="col" id="idgawu">
+    <div id="idgawu" class="col">
      <div id="i91gg8">
       Monthly and annual operation reporting
      </div>
     </div>
    </div>
-   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-3" id="ikid15">
-    <div class="col" id="iuekdf">
+   <div id="ikid15" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-3">
+    <div id="iuekdf" class="col">
      <div id="ith1jz">
       Thermographic diagnostic surveying
      </div>
     </div>
-    <div class="col" id="iyzm83">
+    <div id="iyzm83" class="col">
      <div id="iy7az7">
       Ground maintenance and land management
       <br>
      </div>
     </div>
-    <div class="col" id="i8foh6">
+    <div id="i8foh6" class="col">
      <div id="isj90l">
       Real time access to system monitoring
      </div>
     </div>
    </div>
-   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-3" id="idabjb">
-    <div class="col" id="iq0lb4">
+   <div id="idabjb" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-3">
+    <div id="iq0lb4" class="col">
      <div id="imrp4v">
       Event notifications
      </div>
     </div>
-    <div class="col" id="ikc1hr">
+    <div id="ikc1hr" class="col">
      <div id="iy6ku7">
       Consumable Parts
       <br>
      </div>
     </div>
-    <div class="col" id="ifj4oi">
+    <div id="ifj4oi" class="col">
      <div id="imhndi">
       24/7 fault detection
      </div>
     </div>
    </div>
-   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-3" id="ia9zjb">
-    <div class="col" id="i4x6jj">
+   <div id="ia9zjb" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-3">
+    <div id="i4x6jj" class="col">
      <div id="it9pbu">
       Warranty Management
      </div>
     </div>
-    <div class="col" id="ijinpu">
+    <div id="ijinpu" class="col">
      <div id="i215gv">
       24/7 security control including call-out
       <br>
      </div>
     </div>
-    <div class="col" id="ime7pn">
+    <div id="ime7pn" class="col">
      <div id="iqjbye">
       Spare parts stock control
      </div>
     </div>
    </div>
-   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2" id="ihxbgd">
-    <div class="col" id="ix42z7">
+   <div id="ihxbgd" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2">
+    <div id="ix42z7" class="col">
      <div id="ilqdfm">
       HV systems and equipment maintenance including call-out
      </div>
     </div>
-    <div class="col" id="i44iei">
+    <div id="i44iei" class="col">
      <div id="ik0ak8">
       Reactive maintenance
       <br>
@@ -209,8 +209,8 @@
     </div>
    </div>
   </div>
-  <div class="container-fluid" id="igl7wf">
-   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1" id="ikp5jy">
+  <div id="igl7wf" class="container-fluid">
+   <div id="ikp5jy" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1">
     <div class="col">
      <div id="carouselExampleCaptions" data-bs-ride="carousel" class="carousel slide">
       <div class="carousel-inner">
@@ -225,32 +225,32 @@
        </div>
       </div>
       <div type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev" class="carousel-control-prev">
-       <span aria-hidden="true" class="carousel-control-prev-icon" id="i2q6uo"></span><span class="visually-hidden">Previous</span>
+       <span aria-hidden="true" id="i2q6uo" class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span>
       </div>
-      <div type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next" class="carousel-control-next" id="isb6j5">
-       <span aria-hidden="true" class="carousel-control-next-icon" id="ihvj3e"></span><span class="visually-hidden">Next</span>
+      <div type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next" id="isb6j5" class="carousel-control-next">
+       <span aria-hidden="true" id="ihvj3e" class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span>
       </div>
      </div>
     </div>
    </div>
   </div>
-  <div class="container-fluid" id="i2tmkf">
-   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1" id="isemrc">
-    <div class="col" id="is785o">
+  <div id="i2tmkf" class="container-fluid">
+   <div id="isemrc" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1">
+    <div id="is785o" class="col">
      <div id="iqipzf">
       Benefits?
      </div>
     </div>
    </div>
-   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2" id="i9zrzs">
-    <div class="col" id="il0f35">
+   <div id="i9zrzs" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2">
+    <div id="il0f35" class="col">
      <img id="io7uyh" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/EmbeddedImage.jpg">
      <div id="ice2q9">
       Generation &amp; String Analysis ( Remote Monitoring )
       <br>
      </div>
     </div>
-    <div class="col" id="im9cnj">
+    <div id="im9cnj" class="col">
      <img id="it6sug" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/https_encrypted-tbn0.gstatic.comimages (1).png">
      <div id="izwaow">
       Always of prompt respond and action in first few hours of problem
@@ -258,9 +258,9 @@
     </div>
    </div>
   </div>
-  <div class="container-fluid" id="ixkm4ki">
-   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2" id="irpm73r">
-    <footer class="text-center text-lg-start text-muted w-100" id="itbq45t">
+  <div id="ixkm4ki" class="container-fluid">
+   <div id="irpm73r" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2">
+    <footer id="itbq45t" class="text-center text-lg-start text-muted w-100">
      <!-- Section: Social media -->
      <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
       <!-- Left -->
@@ -290,7 +290,7 @@
         <!-- Grid column -->
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
          <!-- Content -->
-         <h6 class="text-uppercase fw-bold mb-4" id="imhnngl"><i class="fas fa-gem me-3"></i>Company name</h6>
+         <h6 id="imhnngl" class="text-uppercase fw-bold mb-4"><i class="fas fa-gem me-3"></i>Company name</h6>
          <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
         </div><!-- Grid column --><!-- Grid column -->
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
