--- a/products.html
+++ b/products.html
@@ -67,32 +67,33 @@
 
 <style type="text/css">
 
-* { box-sizing: border-box; } body {margin: 0;}#iwog8f{padding:10px;text-align:center;font-size:32px;font-weight:700;}#ionu5i{padding:10px;text-align:center;font-size:16px;font-weight:700;}#iuos5j{padding:10px;text-align:center;}#ix59xq{color:rgb(33, 33, 33);font-family:"Open Sans", sans-serif;font-variant-ligatures:none;white-space-collapse:preserve;}#idntzl{padding:10px;text-align:center;font-weight:600;font-size:20px;}#inwz5d{color:black;width:100%;display:flex;justify-content:center;align-items:center;align-content:center;}#ilsj9j{padding:10px;text-align:center;font-weight:600;font-size:20px;}#ib1yok{color:black;width:100%;display:flex;justify-content:center;}#icmtdk{padding:10px;text-align:center;font-size:24px;font-weight:600;}#iwd7ly{padding:10px;text-align:center;border:0.5px solid #c4c4c4;border-radius:10px 10px 10px 10px;}#ih23d1{color:rgb(33, 33, 33);font-family:"Open Sans", sans-serif;font-variant-ligatures:none;white-space-collapse:preserve;}#ill9o7{color:rgb(33, 33, 33);font-family:"Open Sans", sans-serif;font-variant-ligatures:none;white-space-collapse:preserve;}#iz68ze{padding:10px;text-align:center;border:0.5px solid #c4c4c4;border-radius:10px 10px 10px 10px;}#iml3bo{padding:10px;text-align:center;border:0.5px solid #c4c4c4;border-radius:10px 10px 10px 10px;}#i5qdr05{width:100%;display:flex;justify-content:flex-end;}
+* { box-sizing: border-box; } body {margin: 0;}#i5fk03a{display:flex;justify-content:flex-end;width:100%;}#iqdw275{padding:10px;text-align:center;font-size:32px;font-weight:700;}#i5v6cgj{text-align:center;}#iv6urlf{margin:32px 0 0 0;}#i30k01o{color:black;height:246px;width:100%;}#iutzdn3{padding:10px;font-size:24px;font-weight:600;}#ipcgkxj{padding:10px;}#iu9fqlf{margin:32px 0 0 0;}#i4xhhvr{color:black;width:100%;height:220px;}#i7493r7{padding:10px;font-weight:600;}#iz3oljd{padding:10px;}#ix4tqlk{color:black;width:100%;height:220px;}#i39ttyy{padding:10px;font-weight:600;}#ioj6dch{padding:10px;}#i50dzxl{color:black;width:100%;height:220px;}#ihk548s{padding:10px;font-weight:600;}#iet0iwl{padding:10px;}#ia49paj{color:black;height:246px;width:100%;}#imfc60c{padding:10px;font-size:24px;font-weight:600;}#if1pv8t{padding:10px;}#ia9i6mp{margin:32px 0 0 0;}#iult555{width:100%;height:100%;}
 
 </style>
 
 </head>
 		<html>
  <head></head>
- <body id="ifn25l">
-  <div id="igzhil" class="container-fluid">
-   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1">
-    <div class="col">
-     <nav id="ilw2kj3" class="navbar navbar-expand-lg navbar-light border">
+ <body id="ieeh728">
+  <div class="container-fluid" id="iijurwl">
+   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1" id="iprlr4m">
+    <div class="col" id="iczb22f">
+     <nav class="navbar navbar-expand-lg navbar-light border" id="ik2gt68">
       <div class="container-fluid">
        <a href="#" class="navbar-brand">Navbar</a>
-       <div id="toggle-322336e6-da84-44ce-a430-daedbe929b40" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-322336e6-da84-44ce-a430-daedbe929b40" aria-controls="collapse-322336e6-da84-44ce-a430-daedbe929b40" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler">
+       <div id="toggle-f863d1b5-839f-4e55-a40f-fb0cc27aaadc" type="button" data-bs-toggle="collapse" data-bs-target="#collapse-f863d1b5-839f-4e55-a40f-fb0cc27aaadc" aria-controls="collapse-f863d1b5-839f-4e55-a40f-fb0cc27aaadc" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler">
         <span class="navbar-toggler-icon"></span>
        </div>
-       <div id="collapse-322336e6-da84-44ce-a430-daedbe929b40" class="collapse navbar-collapse">
-        <ul id="i5qdr05" class="navbar-nav me-auto mb-2 mb-lg-0">
-         <li class="nav-item"><a page="page://jvDdNfW6dx2TWgsR" name="index" slug="index" href="//webpage-webbuildershopiana.vercel.app/index.html" link-type="page" id="ieurb5u" class="nav-link">Home</a></li>
-         <li id="ikjl5cg" class="nav-item"><a page="page://Fsz6ThtqsC3LvLnu3" name="About Us" slug="about-us" href="//webpage-webbuildershopiana.vercel.app/about-us.html" link-type="page" id="ivfc946" class="nav-link">About Us</a></li>
-         <li id="ivanz1m" class="nav-item"><a page="page://sqMvZMlEXxEQUI0Axj" name="Contact Us" slug="contact-us" href="//webpage-webbuildershopiana.vercel.app/contact-us.html" link-type="page" id="i0j606j" class="nav-link">Contact Us</a></li>
-         <li class="nav-item dropdown"><a href="#" id="navbarDropdown-5" role="button" data-bs-toggle="dropdown" aria-expanded="false" class="nav-link dropdown-toggle active">Products &amp; Services</a>
-          <ul aria-labelledby="navbarDropdown" id="i4a2y6l" class="dropdown-menu">
-           <li><a page="page://qEXAlJ4GtdjBe9orZSq" name="O&amp;M" slug="o&amp;m" href="//webpage-webbuildershopiana.vercel.app/o&amp;m.html" link-type="page" id="igast0e" class="dropdown-item">O&amp;M</a></li>
-           <li><a href="#" id="ibvt21r" class="dropdown-item">Installation</a><a page="page://ynuEQgnOFQNGGFKHRipn" name="Page 5" slug="page-5" href="//webpage-webbuildershopiana.vercel.app/page-5.html" link-type="page" id="izc348d" class="dropdown-item">Module Cleaning</a></li>
+       <div id="collapse-f863d1b5-839f-4e55-a40f-fb0cc27aaadc" class="collapse navbar-collapse">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="i5fk03a">
+         <li class="nav-item"><a aria-current="page" href="#" class="nav-link" id="iow7a2k">Home</a></li>
+         <li class="nav-item" id="i6iv65a"><a href="#" class="nav-link" id="i1kpf0g">About Us</a></li>
+         <li class="nav-item" id="inwwinm"><a href="#" class="nav-link" id="id8b2tw">Contact Us</a></li>
+         <li class="nav-item" id="isbqj5a"><a href="#" class="nav-link active" id="iet3r8o">Products</a></li>
+         <li class="nav-item dropdown"><a href="#" id="navbarDropdown-6" role="button" data-bs-toggle="dropdown" aria-expanded="false" class="nav-link dropdown-toggle">Services</a>
+          <ul aria-labelledby="navbarDropdown" class="dropdown-menu">
+           <li><a href="#" class="dropdown-item" id="ibqz9ww">O&amp;M</a></li>
+           <li><a href="#" class="dropdown-item" id="i23xums">Installation</a><a href="#" class="dropdown-item" id="i9pghib">Module Cleaning</a></li>
            <li></li>
            <li></li>
           </ul></li>
@@ -105,70 +106,124 @@
      </nav>
     </div>
    </div>
+  </div>
+  <div class="container-fluid" id="iopuclu">
    <div class="row p-2">
     <div class="col">
-     <div id="iwog8f">
-      Module Cleaning
+     <div id="iqdw275">
+      Our Products
+     </div>
+     <div id="i5v6cgj">
+      Trina Solar offers a variety of modules and solutions to fit your project needs.
      </div>
     </div>
    </div>
   </div>
-  <div id="i9s1rh" class="container">
-   <div id="i7gbfj" class="row p-2">
-    <div class="col">
-     <div id="ionu5i">
-      The importance of cleaning
+  <div class="container" id="ilf5mbs">
+   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2" id="ia9i6mp">
+    <div class="col" id="i2e380f">
+     <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/inversor-growatt-7000TL3-S_ml.jpg" id="ia49paj">
+    </div>
+    <div class="col" id="irzn2ec">
+     <div id="imfc60c">
+      Solar String Inverter&nbsp;
      </div>
-     <div id="iuos5j">
-      <span id="ix59xq">Because panels sit outside, they’re vulnerable to the elements. Even the most hardy panels will gradually wear and become dirty over time. We make sure our customers’ panels stay clean and efficient with regular site visits and checks.</span>
+     <div id="if1pv8t">
+      Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
      </div>
     </div>
    </div>
   </div>
-  <div id="icsw66" class="container-fluid">
-   <div id="i4ms4j" class="row p-2">
-    <div class="col">
-     <div id="icmtdk">
-      What we offer?
+  <div class="container-fluid" id="ilyd3z2">
+   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1" id="izpfpmw">
+    <div class="col" id="i8aolg4">
+     <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/Utility Project Large curtain-min_0.png" alt="..." id="iult555" class="img-fluid">
+    </div>
+   </div>
+  </div>
+  <div class="container-fluid" id="iu9fqlf">
+   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-3" id="ift3qcl">
+    <div class="col" id="iitszma">
+     <img id="i4xhhvr" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/22-1000x1000.jpg">
+     <div id="i7493r7">
+      DC LED&nbsp;
      </div>
-     <div id="ir8hys" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-3">
-      <div id="ialhel" class="col">
-       <div id="iwd7ly">
-        <span id="ih23d1">Weekly Cleaning </span>
+     <div id="iz3oljd">
+      Here goes the description
+     </div>
+    </div>
+    <div class="col" id="inwtvjx">
+     <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/Solar-Hot-Water-Heater-Evacuated-Tube-Solar-Water-Heating-System-for-Solar-Water-Heater.jpg" id="i50dzxl">
+     <div id="ihk548s">
+      DC LED&nbsp;
+     </div>
+     <div id="iet0iwl">
+      Here goes the description
+     </div>
+    </div>
+    <div class="col" id="i9lr6p6">
+     <img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/solar-led-street-lamp-500x500.jpg" id="ix4tqlk">
+     <div id="i39ttyy">
+      DC LED&nbsp;
+     </div>
+     <div id="ioj6dch">
+      Here goes the description
+     </div>
+    </div>
+   </div>
+   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-1" id="ixm5xxi">
+    <div class="col" id="i4wz8sh">
+     <div id="carouselExampleCaptions-2" data-bs-ride="carousel" class="carousel slide">
+      <div class="carousel-inner">
+       <div class="carousel-item active">
+        <div class="carousel-caption d-none d-md-block">
+         <h5>First slide label</h5>
+         <p>Some representative placeholder content for the first slide.</p>
+        </div>
+       </div>
+       <div class="carousel-item">
+        <img src="https://images.pexels.com/photos/2682877/pexels-photo-2682877.jpeg?auto=compress&amp;cs=tinysrgb&amp;w=1260&amp;h=750&amp;dpr=2" alt="..." class="d-block w-100">
+        <div class="carousel-caption d-none d-md-block">
+         <h5>Second slide label</h5>
+         <p>Some representative placeholder content for the second slide.</p>
+        </div>
+       </div>
+       <div class="carousel-item">
+        <img src="https://images.pexels.com/photos/15286/pexels-photo.jpg?auto=compress&amp;cs=tinysrgb&amp;w=1260&amp;h=750&amp;dpr=2" alt="..." class="d-block w-100">
+        <div class="carousel-caption d-none d-md-block">
+         <h5>Third slide label</h5>
+         <p>Some representative placeholder content for the third slide.</p>
+        </div>
        </div>
       </div>
-      <div id="i01ed4" class="col">
-       <div id="iml3bo">
-        Monthly Cleaning
-        <br>
-       </div>
+      <div type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev" class="carousel-control-prev">
+       <span aria-hidden="true" class="carousel-control-prev-icon"></span><span class="visually-hidden">Previous</span>
       </div>
-      <div id="i4wtdx" class="col">
-       <div id="iz68ze">
-        <span id="ill9o7">AMC of your solar plant </span>
-       </div>
+      <div type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next" class="carousel-control-next">
+       <span aria-hidden="true" class="carousel-control-next-icon"></span><span class="visually-hidden">Next</span>
       </div>
      </div>
     </div>
    </div>
-  </div>
-  <div id="i6pi0t" class="container">
-   <div id="ilssqc" class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2">
-    <div id="i41128" class="col">
-     <div id="idntzl">
-      Before Cleaning
-     </div><img id="inwz5d" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/EmbeddedImage (1).jpg">
-    </div>
-    <div id="icvy9h" class="col">
-     <div id="ilsj9j">
-      After Cleaning
-     </div><img src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/EmbeddedImage (2).jpg" id="ib1yok">
+   <div class="container" id="i04vk9a">
+    <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2" id="iv6urlf">
+     <div class="col" id="ifsjxg6">
+      <div id="iutzdn3">
+       Solar String Inverter&nbsp;
+      </div>
+      <div id="ipcgkxj">
+       Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+      </div>
+     </div>
+     <div class="col" id="i0jq582">
+      <img id="i30k01o" src="https://dkcut7rvj02cb.cloudfront.net/files/webpage23071202/ASSET/inversor-growatt-7000TL3-S_ml.jpg">
+     </div>
     </div>
    </div>
   </div>
-  <div id="ibglusf" class="container">
-   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2">
-    <footer id="ioibfvz" class="text-center text-lg-start text-muted w-100">
+  <div class="container" id="iwavgft">
+   <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2" id="igf65q7">
+    <footer class="text-center text-lg-start text-muted w-100" id="i3w89uo">
      <!-- Section: Social media -->
      <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
       <!-- Left -->
@@ -198,7 +253,7 @@
         <!-- Grid column -->
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
          <!-- Content -->
-         <h6 id="ifrry41" class="text-uppercase fw-bold mb-4"><i class="fas fa-gem me-3"></i>d square solar serivces</h6>
+         <h6 class="text-uppercase fw-bold mb-4" id="i65dxvd"><i class="fas fa-gem me-3"></i>d square solar services</h6>
          <p>Here you can use rows and columns to organize your footer content. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
         </div><!-- Grid column --><!-- Grid column -->
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
