--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
          <li id="ioia" class="nav-item"><a aria-current="page" href="#" id="iekii" class="nav-link active">Home</a></li>
          <li id="idun8" class="nav-item"><a page="page://Fsz6ThtqsC3LvLnu3" name="About Us" slug="about-us" href="//webpage-webbuildershopiana.vercel.app/about-us.html" link-type="page" id="ih97j" class="nav-link">About Us</a></li>
          <li id="i107ys" class="nav-item"><a page="page://sqMvZMlEXxEQUI0Axj" name="Contact Us" slug="contact-us" href="//webpage-webbuildershopiana.vercel.app/contact-us.html" link-type="page" id="ip5byl" class="nav-link">Contact Us</a></li>
-         <li class="nav-item dropdown"><a href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" class="nav-link dropdown-toggle">Products &amp; Services</a>
+         <li class="nav-item" id="ism7z1h"><a page="page://vfGM39CArM9iPE3lSp2ES" name="Products" slug="products" href="//webpage-webbuildershopiana.vercel.app/products.html" link-type="page" class="nav-link" id="is16amd">Products</a></li>
+         <li class="nav-item dropdown"><a href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" class="nav-link dropdown-toggle">Services</a>
           <ul aria-labelledby="navbarDropdown" id="irx5k" class="dropdown-menu">
            <li><a page="page://qEXAlJ4GtdjBe9orZSq" name="O&amp;M" slug="o&amp;m" href="//webpage-webbuildershopiana.vercel.app/o&amp;m.html" link-type="page" id="iqx3i" class="dropdown-item">O&amp;M</a></li>
            <li><a href="#" id="igy2x" class="dropdown-item">Installation</a><a page="page://ynuEQgnOFQNGGFKHRipn" name="Module Cleaning" slug="module-cleaning" href="//webpage-webbuildershopiana.vercel.app/module-cleaning.html" link-type="page" id="i8f8w" class="dropdown-item">Module cleaning</a></li>
