--- a/products.html
+++ b/products.html
@@ -67,7 +67,7 @@
 
 <style type="text/css">
 
-* { box-sizing: border-box; } body {margin: 0;}#i5fk03a{display:flex;justify-content:flex-end;width:100%;}#iqdw275{padding:10px;text-align:center;font-size:32px;font-weight:700;}#i5v6cgj{text-align:center;}#iv6urlf{margin:32px 0 0 0;}#i30k01o{color:black;height:246px;width:100%;}#iutzdn3{padding:10px;font-size:24px;font-weight:600;}#ipcgkxj{padding:10px;}#iu9fqlf{margin:32px 0 0 0;}#i4xhhvr{color:black;width:100%;height:220px;}#i7493r7{padding:10px;font-weight:600;}#iz3oljd{padding:10px;}#ix4tqlk{color:black;width:100%;height:220px;}#i39ttyy{padding:10px;font-weight:600;}#ioj6dch{padding:10px;}#i50dzxl{color:black;width:100%;height:220px;}#ihk548s{padding:10px;font-weight:600;}#iet0iwl{padding:10px;}#ia49paj{color:black;height:246px;width:100%;}#imfc60c{padding:10px;font-size:24px;font-weight:600;}#if1pv8t{padding:10px;}#ia9i6mp{margin:32px 0 0 0;}#iult555{width:100%;height:100%;}
+* { box-sizing: border-box; } body {margin: 0;}#i5fk03a{display:flex;justify-content:flex-end;width:100%;}#iqdw275{padding:10px;text-align:center;font-size:32px;font-weight:700;}#i5v6cgj{text-align:center;}#iv6urlf{margin:32px 0 0 0;}#i30k01o{color:black;height:246px;width:100%;}#iutzdn3{padding:10px;font-size:24px;font-weight:600;}#ipcgkxj{padding:10px;}#iu9fqlf{margin:32px 0 0 0;}#i4xhhvr{color:black;width:100%;height:220px;}#i7493r7{padding:10px;font-weight:600;}#iz3oljd{padding:10px;}#ix4tqlk{color:black;width:100%;height:220px;}#i39ttyy{padding:10px;font-weight:600;}#ioj6dch{padding:10px;}#i50dzxl{color:black;width:100%;height:220px;}#ihk548s{padding:10px;font-weight:600;}#iet0iwl{padding:10px;}#ia49paj{color:black;height:246px;width:100%;}#imfc60c{padding:10px;font-size:24px;font-weight:600;}#if1pv8t{padding:10px;}#ia9i6mp{margin:32px 0 0 0;}#igf65q7{margin:32px 0 0 0;}#iult555{width:100%;height:100%;}
 
 </style>
 
@@ -191,7 +191,7 @@
    <div class="row p-2 row-cols-1 row-cols-sm-2 row-cols-md-2" id="igf65q7">
     <footer class="text-center text-lg-start text-muted w-100" id="i3w89uo">
      <!-- Section: Social media -->
-     <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+     <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom" id="ist74zi">
       <!-- Left -->
       <div class="me-5 d-none d-lg-block">
        <span>Get connected with us on social networks:</span>
